# pytest-smoke

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/pytest_smoke/: __init__.py  compat.py  hooks.py  plugin.py  types.py  utils.py
src/pytest_smoke/extensions/: xdist.py
tests/: conftest.py  helper.py  test_smoke.py  test_smoke_hooks.py  test_smoke_ini_options.py
